# bicep_fun

./: README.md  databricks.bicep  deploy.py  install_dependencies.sh  main.bicep  main.json  pyproject.toml  settings.py
ad-deployment/: pyproject.toml
ad-deployment/ad_deployment/: compute_policy.py  log.py  settings.py
