[tool.poetry]
name = "e2e-db-deployment"
version = "0.1.0"
description = "end to end deployment on Azure using Bicep & Pumini"
authors = ["JesseHoekman <jessehoekman@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
requests = "^2"
databricks-cli = "^0.16"
python-dotenv = ">=0.21.1"